--- a/stock_location_empty/views/stock.xml
+++ b/stock_location_empty/views/stock.xml
@@ -6,11 +6,7 @@
     <field name="model">stock.location</field>
     <field name="priority" eval="2" />
     <field name="arch" type="xml">
-      <tree
-                string="Stock Location"
-                decoration-info="usage=='view'"
-                decoration-danger="usage=='internal'"
-            >
+      <tree decoration-info="usage=='view'" decoration-danger="usage=='internal'">
         <field name="display_name" />
         <field name="usage" />
         <field name="company_id" groups="base.group_multi_company" />
